name:                connect6-arbiter
version:             0.1.0.0
synopsis:            Haskell implementation of Connect6 game.
-- description:
homepage:            https://github.com/GeekAnonymousSupportGroup/connect6
license:             BSD3
license-file:        LICENSE
author:              Jan Wozniak, Kamil Cupr, Milan Jaros, Peter Trsko
maintainer:          peter.trsko@gmail.com
-- copyright:
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable connect6-arbiter
  hs-source-dirs:      src
  -- main-is:
  -- other-modules:
  build-depends:       base >= 4.5 || < 4.7
